fix spacing bug on search results

--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -8,3 +8,7 @@
 .no-results {
   margin-bottom: 20px;
 }
+
+.no-results-text {
+  margin-bottom: 40px;
+}
